Working on Safari bugs, and unsupported features.

--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,21 @@
-$viewPort: 100vh, 100%;
+$MainColor: #fff;
 
+@mixin replace($content){
+    .replace {
+        visibility: hidden;
+        position: relative;
+    }
+    
+    .replace:after {
+        visibility: visible;
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "#{$content}";
+    }
+}
+
+// --------------------------------------------------------------------------------------------------------------------------
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +24,10 @@ $viewPort: 100vh, 100%;
 
 body{
     font-family: 'Lato', sans-serif;
+}
+
+.pageContainer{
+    background: $MainColor;
 }
 
 .landingPage{
@@ -75,14 +95,6 @@ body{
 .description{
     width: 100%;
     position: relative;
-    /*background: no-repeat url(
-        'data:image/svg+xml;utf8,
-        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="70%">
-                <title>Layer 1</title>
-                <rect transform="rotate(56.63214874267578 485.65185546875006 368.3287658691406)" height="100%" width="30%" y="-100%" x="70%" style="fill:#1A333F;"/>
-            </svg>   
-        '
-    ); */
 
     .contactInfoHolder{
         padding: 2rem;
@@ -135,8 +147,14 @@ body{
         width: 80%;
         margin: auto;
         grid-template-columns: 25% auto auto ;
-        grid-template-rows:  1.5em 1.5em 1.5em 1.5em 12em 1.5em;
+        grid-template-rows:  4.5em 1.5em 1.5em 1.5em 1.5em 12em 1.5em;
         grid-gap: 0.3em 0.6em;
+
+        h2{
+            grid-column: 1/5;
+            font-size: 2.5em;
+            color: #999;
+        }
 
         label{
             width: auto;
@@ -311,6 +329,10 @@ body{
 
         .landingImage{
             background-image: url("Assets/LongerLandingPage.jpg");
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
     }
 
@@ -333,7 +355,7 @@ body{
         }
 
         h2{
-           font-size: 2.5rem; 
+           font-size: 2.2rem; 
         }
 
         .descriptionContent{
@@ -344,24 +366,18 @@ body{
         }
     }
 
+    .contactBackground{
+        .contactForm{
+            h2{
+                font-size: 2.2rem; 
+                @include replace(Sign up with Janique);
+                min-width: 486px;
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 420px){
-    @mixin replace($content){
-        .replace {
-            visibility: hidden;
-            position: relative;
-        }
-        
-        .replace:after {
-            visibility: visible;
-            position: absolute;
-            top: 0;
-            left: 0;
-            content: "#{$content}";
-        }
-    }
-    
     .contactForm{
         #fname{
             @include replace(First);
